--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -60,9 +60,6 @@ power-of-two side lengths. Images and volumes can come in arbitrary dimensions.
 Tiling, padding, or resampling to fit a power-of-two Hilbert curve introduces overhead
 and can harm locality near boundaries.
 
-    %\caption{2D Gilbert curves for i) $8\times 8$, ii) $18\times 6$, iii) $13\times 8$ (with notch), iv) $14\times 14$.}
-    %\caption{3D Gilbert curves for i) $4 \times 4 \times 4$, ii) $6 \times 6 \times 6$, iii) $8 \times 4 \times 4$, iv) $5  \times 4 \times 4$ (with notch).}
-
 \begin{figure}[!htb]
   \begin{minipage}{0.48\textwidth}
     \centering
@@ -96,17 +93,10 @@ preclude a strict non self-intersecting path that visits every cell exactly once
 without any diagonal steps.
 We will briefly address the conditions under which the Gilbert curve algorithm introduces diagonal steps throughout this paper.
 
+\vspace{-0.75em}
 
 \section*{Related Work}
 
-%Hilbert introduced his eponymous curve as a continuous mapping from the unit interval to the unit square \cite{hilbert1891}.
-%Many discrete variants exist;
-%the most common recursive discretization applies most directly to
-%power-of-two square (2D) and cubic (3D) grids.
-
-%Hilbert defined a space filling curve, which has been since named the \textit{Hilbert curve}, as a continuous map from the unit interval to the unit square \cite{hilbert1891}.
-%Hilbert defined a continuous, space filling curve that maps the unit interval to the unit square, which as been since named the \textit{Hilbet curve} \cite{hilbert1891}.
-%One discretization variant applies to square (2D) and cubic (3D) grids with equal sides that are powers of two.
 Hilbert introduced a continuous space-filling curve from the unit interval to the unit square, known as the Hilbert curve \cite{hilbert1891}.
 Its standard discrete form applies to square (2D) and cubic (3D) grids with equal power-of-two side lengths.
 
@@ -115,18 +105,16 @@ $3\times3$ Peano and $2\times2$ Hilbert block types.
 While Tautenhahn's approach is 2D only and has non-uniform subdivision schemes dependent on side length parity,
 it motivates an important endpoint-parity constraint that we make explicit.
 
-%While that approach is 2D-only and not purely uniform across scales,
-
 Zhang, Kamata, and Ueshige \cite{zhang2006} propose a pseudo-Hilbert scan for arbitrary rectangles.
 Compared to our construction, their method follows a more intricate case structure and does not
 suggest a direct extension to 3D.
+
+\vspace{-0.75em}
 
 \section*{Parity Constraints on Corner Endpoints}
 \label{sec:parity}
 
 We use a parity argument to determine whether a Hamiltonian path is possible between two grid corner endpoints.
-%We will repeatedly need to know when a Hamiltonian path is possible between two corners of a grid.
-%The key constraint is parity.
 If we consider the standard checkerboard coloring of an $m\times n$ grid graph (or an $m\times n\times p$ grid graph in 3D),
 then adjacent vertices always have opposite color.
 Any path alternates colors at every step, so the parity of the endpoints is constrained by the total number of visited vertices.
@@ -145,26 +133,8 @@ If $N$ is odd, then $N-1$ is even and the endpoints must have the same color. If
 \end{proof}
 
 We call a pair of endpoints \emph{color compatible} if they satisfy Lemma \ref{lemma:colorCompatibility}.
-%Figure~\ref{fig:exampleHampath} illustrates the constraint for small 2D grids.
 Color compatibility is necessary, in general, for Hamiltonicity. For the specific family of corner-to-corner subproblems produced by our construction,
 it is also sufficient: a trivial linear zig-zag path connecting color compatible corners is always possible.
-
-%For a path starting at $(0,0,0)$ and ending $|\alpha|$ steps in one of the axis-aligned dimensions,
-%then Table \ref{table:pathTable} enumerates this condition under which a valid path is possible.
-
-%Assuming a curve starts from position $p_s=(0,0,0)$ and has proposed
-%endpoint at $p_e=((w-1),0,0)$, with a cuboid region as $\alpha = (w,0,0), \beta = (0,h,0), \gamma = (0,0,d)$.
-
-%We focus on optimizing for providing a notch-free path when all side lengths are even and allow notches when $|\alpha|$ is odd in 2D
-%or when one of the side lengths is odd in 3D.
-
-%The 2D Gilbert curve limits the number of notches to one.
-%The 3D Gilbert curve's subdivision strategy creates a notch when the distance between endpoints is odd,
-%potentially creating more than one notch.
-%
-%In both the 2D and 3D case, when the original side lengths are all even, no notches will be present.
-%
-
 
 
 \begin{figure}[!htb]
@@ -195,10 +165,15 @@ it is also sufficient: a trivial linear zig-zag path connecting color compatible
 
 \end{figure}
 
+\vspace{-0.75em}
+
 \section*{Algorithms}
 \label{sec:algorithms}
 
 Algorithms~\ref{alg:gilbert2d} and~\ref{alg:gilbert3d} give pseudocode for the 2D and 3D Gilbert curve constructions.
+Both algorithms enumerate a Gilbert curve by repeated calls, returning a resolved point
+at every yield statement, then saving state so that it can continue when called again.
+
 We represent an oriented grid-aligned rectangle or cuboid by an origin $p\in\mathbb{Z}^d$ and axis vectors
 $\alpha,\beta,\gamma\in\mathbb{Z}^d$, $d \in \{2,3\}$, whose nonzero components encode the side lengths and directions.
 The function $\delta(\cdot)$ returns the unit axis direction of its argument, and $\text{div}(\cdot,\cdot)$ denotes
@@ -320,6 +295,8 @@ Algorithm~\ref{alg:gilbert2d} gives pseudo code for the 2D Gilbert curve.
 
 \end{minipage}
 
+\vspace{-0.45em}
+
 \section*{Extension to 3D}
 \label{sec:3d}
 
@@ -327,7 +304,8 @@ In the basic case, a subdivision scheme is used to split the cuboid into five re
 Two cube like regions are partitioned where the path starts and stops, and three oblong cuboid regions are partitioned
 for the middle portion of the path.
 Figure \ref{fig:gilbert3DJSplit} provides an exploded view of the main subdivision and where endpoints connect.
-See also Figure \ref{fig:gilbert3d_bulk_template} for the template and Figure \ref{fig:gilbert3d_bulk_example}
+%See also Figure \ref{fig:gilbert3d_bulk_template} for the template and Figure \ref{fig:gilbert3d_bulk_example}
+See also Figure \ref{fig:gilbert3d_alg_fig} (\textit{g}) for the template and Figure \ref{fig:gilbert3d_alg_fig} (\textit{h})
 for a $10 \times 10 \times 10$ example, with each region color coded.
 
 % During the course of subdivision, if the cuboid has an aspect ratio of width to either height or depth that exceeds $(3/2)$,
@@ -339,6 +317,7 @@ During subdivision, if the cuboid’s aspect ratio between width and either heig
 a horizontal bisection is performed. Two additional anisotropic cases are handled analogously when the aspect
 ratio between height and depth, or depth and height, exceeds a threshold of $4/3$.
 These thresholds were chosen empirically; a principled derivation and further optimization are left for future work.
+See Figure \ref{fig:gilbert3d_alg_fig} (\textit{a}-\textit{f}) for color coded templates and color coded examples.
 
 %If subregions have aspect ratio that
 %During the course of sub-division, if the width like dimension ($\alpha$) is much larger, the curve is split in half along
@@ -406,65 +385,71 @@ the standard 3D Hilbert curve.
 \end{minipage}\hfill
 \begin{minipage}[ht]{0.5\linewidth}
 
-  \vspace{12.0em}
+    \centering
+    \includegraphics[width=\linewidth]{gilbert3d_alg_fig2.pdf}
+    \captionof{figure}{ }
+    \label{fig:gilbert3d_alg_fig}
 
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_alpha}
-	\end{minipage}\hfill
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha_example.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_alpha_example}
-	\end{minipage}
 
-  \vspace{3.0em}
-
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_simple.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_beta}
-	\end{minipage}\hfill
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_example.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_beta_example}
-	\end{minipage}
-
-  \vspace{3.0em}
-
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_simple.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_gamma}
-	\end{minipage}\hfill
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_example.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_eccentric_gamma_example}
-	\end{minipage}
-
-  \vspace{3.0em}
-
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_bulk_template.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_bulk_template}
-	\end{minipage}\hfill
-	\begin{minipage}{0.49\textwidth}
-		\centering
-		\includegraphics[width=\linewidth]{gilbert3d_bulk_example.pdf}
-		\captionof{figure}{ }
-		\label{fig:gilbert3d_bulk_example}
-	\end{minipage}
+%  \vspace{12.0em}
+%
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_alpha}
+%  \end{minipage}\hfill
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha_example.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_alpha_example}
+%  \end{minipage}
+%
+%  \vspace{3.0em}
+%
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_simple.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_beta}
+%  \end{minipage}\hfill
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_example.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_beta_example}
+%  \end{minipage}
+%
+%  \vspace{3.0em}
+%
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_simple.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_gamma}
+%  \end{minipage}\hfill
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_example.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_eccentric_gamma_example}
+%  \end{minipage}
+%
+%  \vspace{3.0em}
+%
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_bulk_template.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_bulk_template}
+%  \end{minipage}\hfill
+%  \begin{minipage}{0.49\textwidth}
+%    \centering
+%    \includegraphics[width=\linewidth]{gilbert3d_bulk_example.pdf}
+%    \captionof{figure}{ }
+%    \label{fig:gilbert3d_bulk_example}
+%  \end{minipage}
 
 \end{minipage}
 
