--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -171,8 +171,8 @@ it is also sufficient: a trivial linear zig-zag path connecting color compatible
 \label{sec:algorithms}
 
 Algorithms~\ref{alg:gilbert2d} and~\ref{alg:gilbert3d} give pseudocode for the 2D and 3D Gilbert curve constructions.
-Both algorithms enumerate a Gilbert curve by repeated calls, returning a resolved point
-at every yield statement, then saving state so that it can continue when called again.
+%Both algorithms enumerate a Gilbert curve by repeated calls, returning a resolved point
+%at every yield statement, then saving state so that it can continue when called again.
 
 We represent an oriented grid-aligned rectangle or cuboid by an origin $p\in\mathbb{Z}^d$ and axis vectors
 $\alpha,\beta,\gamma\in\mathbb{Z}^d$, $d \in \{2,3\}$, whose nonzero components encode the side lengths and directions.
@@ -231,27 +231,68 @@ Algorithm~\ref{alg:gilbert2d} gives pseudo code for the 2D Gilbert curve.
   \begin{algorithmic}
 
     \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^2$}
-    \Function{Gilbert2D}{$p$, $\alpha$, $\beta$}
-      \State $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
-      \If{ $(|\beta| \equiv 1)$ }
-        \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-      \ElsIf{ $(|\alpha| \equiv 1)$ }
-        \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-      \ElsIf{ $(2 |\alpha| > 3 |\beta|)$ }
-        \If{ $(|\alpha_2| > 2)$ and \\ \hskip4.12em $(|\alpha_2| \bmod{2} \equiv 1)$ }
-          \State $\alpha_2 \leftarrow \alpha_2 + \delta(\alpha)$
-        \EndIf
-        \State \textbf{yield} Gilbert2D($p$, $\alpha_2$, $\beta$)
-        \State \textbf{yield} Gilbert2D($p + \alpha_2$, $\alpha - \alpha_2$, $\beta$)
-      \Else
-        \If{ $(|\beta_2| > 2)$ and \\ \hskip4.12em $(|\beta_2| \bmod{2} \equiv 1)$ }
-          \State $\beta_2 \leftarrow \beta_2 + \delta(\beta)$
-        \EndIf
-        \State \textbf{yield} Gilbert2D($p$, \\ \hskip9.75em $\beta_2$, $\alpha_2$)
-        \State \textbf{yield} Gilbert2D($p + \beta_2$, \\ \hskip9.75em $\alpha$, $(\beta - \beta_2)$)
-        \State \textbf{yield} Gilbert2D($p + (\alpha - \delta(\alpha)) +$ \\ \hskip9.75em $(\beta_2 - \delta(\beta))$, \\ \hskip9.75em $-\beta_2$, $-(\alpha - \alpha_2)$)
-      \EndIf
-    \EndFunction
+    \State \textbf{function }$\text{Gilbert2D}(p, \alpha, \beta)$
+    %\Function{Gilbert2D}{$p, \alpha, \beta$}
+      \vskip0.5em
+      \State \hskip1.0em $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
+      \vskip0.5em
+      %\If{ $(|\beta| \equiv 1)$ }
+      \State \hskip1.0em \textbf{if }$(|\beta| \equiv 1)$
+        \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+      %\ElsIf{ $(|\alpha| \equiv 1)$ }
+      \vskip0.5em
+      \State \hskip1.0em \textbf{else if }$(|\alpha| \equiv 1)$
+        \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+      %\ElsIf{ $(2 |\alpha| > 3 |\beta|)$ }
+      \vskip0.5em
+      \State \hskip1.0em \textbf{else if }$(2 |\alpha| > 3 |\beta|)$
+        %\If{ $(|\alpha_2| > 2)$ and \\ \hskip4.12em $(|\alpha_2| \bmod{2} \equiv 1)$ }
+        %\State \hskip1.0em \textbf{if }$(|\alpha_2| > 2)$ and \\ \hskip3.4em $(|\alpha_2| \bmod{2} \equiv 1)$
+        \vskip0.5em
+        \State \hskip2.0em \textbf{if }$(|\alpha_2| > 2) \text{ and } (|\alpha_2| \bmod{2} \equiv 1)$
+          \State \hskip3.0em $\alpha_2 \leftarrow \alpha_2 + \delta(\alpha)$
+        %\EndIf
+        \vskip0.5em
+        \State \hskip2.0em Gilbert2D($p, \alpha_2, \beta$)
+        \State \hskip2.0em Gilbert2D($p + \alpha_2, \alpha - \alpha_2, \beta$)
+      %\Else
+      \vskip0.5em
+      \State \hskip1.0em \textbf{else }
+        %\If{ $(|\beta_2| > 2)$ and \\ \hskip4.12em $(|\beta_2| \bmod{2} \equiv 1)$ }
+        \vskip0.5em
+        \State \hskip2.0em \textbf{if }$(|\beta_2| > 2) \text{ and } (|\beta_2| \bmod{2} \equiv 1)$
+          \State \hskip3.0em $\beta_2 \leftarrow \beta_2 + \delta(\beta)$
+        %\EndIf
+        %\State Gilbert2D($p$, \\ \hskip7.35em $\beta_2, \alpha_2$)
+        \vskip0.5em
+        \State \hskip2.0em Gilbert2D($p, \beta_2, \alpha_2$)
+        \State \hskip2.0em Gilbert2D($p + \beta_2$, \\ \hskip6.45em $\alpha, (\beta - \beta_2)$)
+        \State \hskip2.0em Gilbert2D($p + (\alpha - \delta(\alpha)) \ +$ \\ \hskip6.45em $(\beta_2 - \delta(\beta))$, \\ \hskip6.2em $-\beta_2, -(\alpha - \alpha_2)$)
+      %\EndIf
+    %\EndFunction
+
+%    \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^2$}
+%    \Function{Gilbert2D}{$p$, $\alpha$, $\beta$}
+%      \State $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
+%      \If{ $(|\beta| \equiv 1)$ }
+%        \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+%      \ElsIf{ $(|\alpha| \equiv 1)$ }
+%        \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+%      \ElsIf{ $(2 |\alpha| > 3 |\beta|)$ }
+%        \If{ $(|\alpha_2| > 2)$ and \\ \hskip4.12em $(|\alpha_2| \bmod{2} \equiv 1)$ }
+%          \State $\alpha_2 \leftarrow \alpha_2 + \delta(\alpha)$
+%        \EndIf
+%        \State \textbf{yield} Gilbert2D($p$, $\alpha_2$, $\beta$)
+%        \State \textbf{yield} Gilbert2D($p + \alpha_2$, $\alpha - \alpha_2$, $\beta$)
+%      \Else
+%        \If{ $(|\beta_2| > 2)$ and \\ \hskip4.12em $(|\beta_2| \bmod{2} \equiv 1)$ }
+%          \State $\beta_2 \leftarrow \beta_2 + \delta(\beta)$
+%        \EndIf
+%        \State \textbf{yield} Gilbert2D($p$, \\ \hskip9.75em $\beta_2$, $\alpha_2$)
+%        \State \textbf{yield} Gilbert2D($p + \beta_2$, \\ \hskip9.75em $\alpha$, $(\beta - \beta_2)$)
+%        \State \textbf{yield} Gilbert2D($p + (\alpha - \delta(\alpha)) +$ \\ \hskip9.75em $(\beta_2 - \delta(\beta))$, \\ \hskip9.75em $-\beta_2$, $-(\alpha - \alpha_2)$)
+%      \EndIf
+%    \EndFunction
 
   \end{algorithmic}
 \end{algorithm}
@@ -304,30 +345,14 @@ In the basic case, a subdivision scheme is used to split the cuboid into five re
 Two cube like regions are partitioned where the path starts and stops, and three oblong cuboid regions are partitioned
 for the middle portion of the path.
 Figure \ref{fig:gilbert3DJSplit} provides an exploded view of the main subdivision and where endpoints connect.
-%See also Figure \ref{fig:gilbert3d_bulk_template} for the template and Figure \ref{fig:gilbert3d_bulk_example}
 See also Figure \ref{fig:gilbert3d_alg_fig} (\textit{g}) for the template and Figure \ref{fig:gilbert3d_alg_fig} (\textit{h})
 for a $10 \times 10 \times 10$ example, with each region color coded.
-
-% During the course of subdivision, if the cuboid has an aspect ratio of width to either height or depth that exceeds $(3/2)$,
-% a horizontal bisection is done.
-% Two other anisotropic cases are tested for when the aspect ratio of height to depth or depth to height exceeds a $(4/3)$ threshold.
-% The reader is referred to Algorithm \ref{alg:gilbert3d} for further details.
 
 During subdivision, if the cuboid’s aspect ratio between width and either height or depth exceeds $3/2$,
 a horizontal bisection is performed. Two additional anisotropic cases are handled analogously when the aspect
 ratio between height and depth, or depth and height, exceeds a threshold of $4/3$.
 These thresholds were chosen empirically; a principled derivation and further optimization are left for future work.
 See Figure \ref{fig:gilbert3d_alg_fig} (\textit{a}-\textit{f}) for color coded templates and color coded examples.
-
-%If subregions have aspect ratio that
-%During the course of sub-division, if the width like dimension ($\alpha$) is much larger, the curve is split in half along
-%the $\alpha$ length (Figure \ref{fig:gilbert3d_eccentric_alpha}, \ref{fig:gilbert3d_eccentric_alpha_example}).
-%If the $\alpha$ eccentric split is not triggered, the height-like dimension, $\beta$, is then compared to the depth-like dimension, $\gamma$
-%and, if very much larger, an eccentric subdivision scheme is used that splits in the $\alpha$ and $\beta$ direction
-%(Figure \ref{fig:gilbert3d_eccentric_beta}, \ref{fig:gilbert3d_eccentric_beta_example}).
-%If both $\alpha$ and $\beta$ are not much larger, a check is done to see if the depth-like dimension, $\gamma$, is much larger than
-%than the height-like dimension, $\beta$, splitting in the $\alpha$ and $\gamma$ direction if so
-%(Figure \ref{fig:gilbert3d_eccentric_gamma}, \ref{fig:gilbert3d_eccentric_gamma_example}).
 
 Endpoints within a sub-divided region are kept on the exterior of the parent cuboid and joined after the resulting recursion
 has completed.
@@ -336,7 +361,6 @@ encountered, ensuring a Hamiltonian path and a realization free from diagonal mo
 As with the 2D Gilbert curve, when side dimensions are equal and exact powers of two, the resulting curve is identical to
 the standard 3D Hilbert curve.
 
-
 \begin{minipage}[ht]{0.5\linewidth}
 \begin{algorithm}[H]
   \caption{Gilbert 3D}
@@ -344,53 +368,93 @@ the standard 3D Hilbert curve.
   \begin{algorithmic}
 
     \State \textit{\# $p, \alpha, \beta, \gamma \in \mathbb{Z}^3$}
-    \Function{Gilbert3D}{$p$, $\alpha$, $\beta$, $\gamma$}
+    %\Function{Gilbert3D}{$p, \alpha, \beta, \gamma$}
+    \State \textbf{function }$\text{Gilbert3D}(p, \alpha, \beta, \gamma)$
 
     \vskip0.5em
-    \State $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
-    \State $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
-    \State $\gamma_2 \leftarrow \text{div}(\gamma,2) + \Delta(\gamma _ 2, \gamma)$
-
-
-    %\If{ $(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
-    %  \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-    %\ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
-    %  \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-    %\ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$ }
-    %  \State \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
-    %\EndIf
+    \State \hskip1.0em $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
+    \State \hskip1.0em $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
+    \State \hskip1.0em $\gamma_2 \leftarrow \text{div}(\gamma,2) + \Delta(\gamma _ 2, \gamma)$
 
     \vskip0.5em
 
-    \State \textbf{if }$(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
-      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
-      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$
-      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
+    \State \hskip1.0em \textbf{if }$(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+      \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+    \State \hskip1.0em \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+      \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+    \State \hskip1.0em \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$
+      \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
 
     \vskip0.5em
 
-    \State \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\alpha _ 2$,$\beta$,$\gamma$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \alpha _ 2$,$\alpha - \alpha _ 2$,$\beta$,$\gamma$)
-    \State \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma$,$\alpha _ 2$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\alpha$,$\beta - \beta _ 2$,$\gamma$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p + $ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.125em $-\beta _ 2$,$\gamma$,$-(\alpha - \alpha _ 2)$)
-    \State \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\gamma _ 2$,$\alpha _ 2$,$\beta$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \gamma _ 2$,$\alpha$, $\beta$, $\gamma - \gamma _ 2$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha))$ \\ \hskip9.125em $(\gamma2 - \delta(\gamma))$, \\ \hskip9.5em $-\gamma _ 2$,$-(\alpha-\alpha _ 2)$, $\beta$)
+    \State \hskip1.0em \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
+      \State \hskip2.0em  Gilbert3D($p,\alpha _ 2,\beta,\gamma$)
+      \State \hskip2.0em  Gilbert3D($p + \alpha _ 2,\alpha - \alpha _ 2,\beta,\gamma$)
 
-    \State \textbf{else }
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma _ 2$,$\alpha _ 2$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\gamma$,$\alpha _ 2$,$(\beta - \beta _ 2)$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip9.125em $(\gamma - \delta(\gamma))$, \\ \hskip9.5em $\alpha$,$-\beta_2$,$-(\gamma-\gamma_2)$)
-      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha _ 2 - \delta(\alpha)) +$ \\ \hskip9.125em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip9.5em $-\gamma$,$-(\alpha - \alpha_2)$,$(\beta-\beta_2)$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.5em $-\beta _ 2$,$\gamma _ 2$,$-(\alpha - \alpha_2)$)
+    \vskip0.5em
 
-    \EndFunction
+    \State \hskip1.0em \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
+      \State \hskip2.0em  Gilbert3D($p,\beta _ 2,\gamma,\alpha _ 2$)
+      \State \hskip2.0em  Gilbert3D($p + \beta _ 2,\alpha,\beta - \beta _ 2,\gamma$)
+      \State \hskip2.0em  Gilbert3D($p \ + $ \\ \hskip6.255em $(\alpha - \delta(\alpha)) +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma,-(\alpha - \alpha _ 2)$)
+
+    \vskip0.5em
+
+    \State \hskip1.0em \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
+      \State \hskip2.0em  Gilbert3D($p,\gamma _ 2,\alpha _ 2,\beta$)
+      \State \hskip2.0em  Gilbert3D($p + \gamma _ 2,\alpha, \beta, \gamma - \gamma _ 2$)
+      \State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\alpha - \delta(\alpha))$ \\ \hskip6.25em $(\gamma_2 - \delta(\gamma))$, \\ \hskip6.0em $-\gamma _ 2,-(\alpha-\alpha _ 2), \beta$)
+
+    \vskip0.5em
+
+    \State \hskip1.0em \textbf{else }
+      \State \hskip2.0em  Gilbert3D($p, \beta _ 2, \gamma _ 2, \alpha _ 2$)
+      \State \hskip2.0em  Gilbert3D($p + \beta _ 2,\gamma,\alpha _ 2,(\beta - \beta _ 2)$)
+      \State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip6.25em $(\gamma - \delta(\gamma))$, \\ \hskip6.5em $\alpha,-\beta_2,-(\gamma-\gamma_2)$)
+      \State \hskip2.0em  Gilbert3D($p  +$ \\ \hskip6.25em $(\alpha _ 2 - \delta(\alpha)) \ + \ $ \\ \hskip6.5em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip6.00em $-\gamma,-(\alpha - \alpha_2),(\beta-\beta_2)$)
+    \State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\alpha - \delta(\alpha)) \ +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma _ 2,-(\alpha - \alpha_2)$)
+
+%    \EndFunction
+
+%    \State \textit{\# $p, \alpha, \beta, \gamma \in \mathbb{Z}^3$}
+%    \Function{Gilbert3D}{$p$, $\alpha$, $\beta$, $\gamma$}
+%
+%    \vskip0.5em
+%    \State $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
+%    \State $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
+%    \State $\gamma_2 \leftarrow \text{div}(\gamma,2) + \Delta(\gamma _ 2, \gamma)$
+%
+%    \vskip0.5em
+%
+%    \State \textbf{if }$(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+%    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+%    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$
+%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
+%
+%    \vskip0.5em
+%
+%    \State \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\alpha _ 2$,$\beta$,$\gamma$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \alpha _ 2$,$\alpha - \alpha _ 2$,$\beta$,$\gamma$)
+%    \State \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma$,$\alpha _ 2$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\alpha$,$\beta - \beta _ 2$,$\gamma$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + $ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.125em $-\beta _ 2$,$\gamma$,$-(\alpha - \alpha _ 2)$)
+%    \State \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\gamma _ 2$,$\alpha _ 2$,$\beta$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \gamma _ 2$,$\alpha$, $\beta$, $\gamma - \gamma _ 2$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha))$ \\ \hskip9.125em $(\gamma_2 - \delta(\gamma))$, \\ \hskip9.5em $-\gamma _ 2$,$-(\alpha-\alpha _ 2)$, $\beta$)
+%
+%    \State \textbf{else }
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma _ 2$,$\alpha _ 2$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\gamma$,$\alpha _ 2$,$(\beta - \beta _ 2)$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip9.125em $(\gamma - \delta(\gamma))$, \\ \hskip9.5em $\alpha$,$-\beta_2$,$-(\gamma-\gamma_2)$)
+%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha _ 2 - \delta(\alpha)) +$ \\ \hskip9.125em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip9.5em $-\gamma$,$-(\alpha - \alpha_2)$,$(\beta-\beta_2)$)
+%    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.5em $-\beta _ 2$,$\gamma _ 2$,$-(\alpha - \alpha_2)$)
+%
+%    \EndFunction
 
   \end{algorithmic}
 \end{algorithm}
@@ -401,67 +465,6 @@ the standard 3D Hilbert curve.
     \includegraphics[width=\linewidth]{gilbert3d_alg_fig2.pdf}
     \captionof{figure}{ }
     \label{fig:gilbert3d_alg_fig}
-
-
-%  \vspace{12.0em}
-%
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_alpha}
-%  \end{minipage}\hfill
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha_example.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_alpha_example}
-%  \end{minipage}
-%
-%  \vspace{3.0em}
-%
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_simple.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_beta}
-%  \end{minipage}\hfill
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_example.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_beta_example}
-%  \end{minipage}
-%
-%  \vspace{3.0em}
-%
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_simple.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_gamma}
-%  \end{minipage}\hfill
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_example.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_eccentric_gamma_example}
-%  \end{minipage}
-%
-%  \vspace{3.0em}
-%
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_bulk_template.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_bulk_template}
-%  \end{minipage}\hfill
-%  \begin{minipage}{0.49\textwidth}
-%    \centering
-%    \includegraphics[width=\linewidth]{gilbert3d_bulk_example.pdf}
-%    \captionof{figure}{ }
-%    \label{fig:gilbert3d_bulk_example}
-%  \end{minipage}
 
 \end{minipage}
 
@@ -479,22 +482,7 @@ providing a natural generalization of classical discrete Hilbert curves beyond p
 For grids with odd dimensions, the resulting curves may contain diagonal steps, but still retain strong
 locality properties and remain suitable for practical use in applications such as cache-coherent traversal and image or volume compression.
 
-% The Gilbert curve provides a practical alternative to discrete Hilbert curves when the target grid has
-% arbitrary rectangular dimensions. This avoids padding or resampling that is otherwise required to fit
-% power-of-two constructions, while maintaining a recursive, locality-preserving traversal.
-% Such layouts are useful for cache-coherent image/volume traversal, spatial indexing, and visualization
-% of 1D data on 2D/3D grids \cite{anders2009, bohm2021, cortesi2011, moon2001}.
-
-%There are several natural directions for future work.
-%First, while our anisotropic-split thresholds are simple and work well in practice, one can define more
-%explicit optimization criteria for when and how to switch subdivision templates.
-%Second, in 3D, relaxing subproblem endpoint constraints may allow constructions that further reduce
-%the occurrence of forced diagonal steps when one or more side lengths are odd.
-%Finally, more refined choices of subdivision schemes could be explored that focus on regularity metrics and/or perceptual quality.
-
 While the anisotropic split thresholds are empirically chosen, they work well in practice; future work could formalize optimization criteria for selecting subdivision templates.
-%While our anisotropic-split thresholds are simple and work well in practice, future work could define more
-%explicit optimization criteria for when and how to switch subdivision templates.
 In 3D, relaxing subproblem endpoint constraints may allow constructions that further reduce
 the occurrence of forced diagonal steps when one or more side lengths are odd.
 
